--- a/src/app/books/containers/create-container/create-container.component.html
+++ b/src/app/books/containers/create-container/create-container.component.html
@@ -1,6 +1,6 @@
 <app-book-create
-    [authorsList] = "authors"
-    [genresList] = "genres"
+    [authors$] = "authors$"
+    [getGenresList$] = "getGenresList$"
     (sortAuthors)="sortAuthors($event)"
     (createBook)="createBook($event)"
 >
