--- a/src/app/books/components/genres-autocomp/genres-autocomp.component.html
+++ b/src/app/books/components/genres-autocomp/genres-autocomp.component.html
@@ -3,7 +3,7 @@
   <mat-chip-list>
     <mat-chip 
     *ngFor="let genre of value"
-    (removed)="remove(genre)">
+    (removed)="deleteGenre(genre)">
       {{genre.name}}
       <mat-icon matChipRemove>cancel</mat-icon>
     </mat-chip>
@@ -18,7 +18,7 @@
       [matAutocomplete]="auto"
     >
     <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let genre of genresList" [value]="genre">
+      <mat-option *ngFor="let genre of (genresList | hideSelectedGenres: value) " [value]="genre">
         {{genre.name}}
       </mat-option>
     </mat-autocomplete>
