basic mat-form-field (don't work)

--- a/src/app/books/components/create/create.component.html
+++ b/src/app/books/components/create/create.component.html
@@ -35,10 +35,14 @@
                 </mat-form-field>
             </ng-container>
             
-            <app-genres-autocomp class="full-width"
-                [getGenresList$]="getGenresList$"
-                formControlName="genres">
-            </app-genres-autocomp>
+            <mat-form-field class="full-width"  appearance="fill">
+                <mat-label>Genres</mat-label>
+                <app-genres-autocomp class="full-width"
+                    [getGenresList$]="getGenresList$"
+                    formControlName="genres"
+                >
+                </app-genres-autocomp>
+            </mat-form-field>
 
             <mat-form-field class="full-width"  appearance="fill">
                 <mat-label>description</mat-label>
