--- a/src/app/books/components/genres-autocomp/genres-autocomp.component.html
+++ b/src/app/books/components/genres-autocomp/genres-autocomp.component.html
@@ -1,28 +1,36 @@
 
-<div class="chips">
+<div *ngIf="genresData$ | async as genresList"
+    class="full-width genre-autocomplete"
+    (focusin)="onFocusIn($event)"
+    (focusout)="onFocusOut($event)"
+>
   <mat-chip-list>
     <mat-chip 
-    *ngFor="let genre of value"
-    (removed)="deleteGenre(genre)">
+        *ngFor="let genre of value"
+        (click)="onFocusOut($event)"
+        (removed)="deleteGenre(genre)">
       {{genre.name}}
       <mat-icon matChipRemove>cancel</mat-icon>
     </mat-chip>
+    <input matInput
+        type="text"
+        class="genre-input"
+        [formControl]="genresControl"
+        #search name="search"
+        [matAutocomplete]="auto"
+    >
+    <mat-autocomplete #auto="matAutocomplete" >
+        <mat-option
+            *ngFor="let genre of (genresList | hideSelectedGenres: value) "
+            [value]="genre"
+        >
+          {{genre.name}}
+        </mat-option>
+    </mat-autocomplete>
+
   </mat-chip-list>
 </div>
 
-<mat-form-field *ngIf="genresData$ | async as genresList" class="full-width" appearance="fill">
-    <mat-label>Genres</mat-label>
-    <input matInput type="text"
-      [formControl]="genresControl"
-      #search name="search"
-      [matAutocomplete]="auto"
-    >
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let genre of (genresList | hideSelectedGenres: value) " [value]="genre">
-        {{genre.name}}
-      </mat-option>
-    </mat-autocomplete>
-</mat-form-field>
 
 
 
