--- a/src/app/books/components/genres-autocomp/genres-autocomp.component.html
+++ b/src/app/books/components/genres-autocomp/genres-autocomp.component.html
@@ -4,8 +4,9 @@
     (focusin)="onFocusIn($event)"
     (focusout)="onFocusOut($event)"
 >
-  <mat-chip-list>
-    <mat-chip 
+  <mat-chip-list #chipList>
+    <mat-chip color="accent"
+    selected
         *ngFor="let genre of value"
         (click)="onFocusOut($event)"
         (removed)="deleteGenre(genre)">
@@ -18,6 +19,7 @@
         [formControl]="genresControl"
         #search name="search"
         [matAutocomplete]="auto"
+        [matChipInputFor]="chipList"
     >
     <mat-autocomplete #auto="matAutocomplete" >
         <mat-option
