--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -3,5 +3,6 @@
     <a class="nav-link" routerLink="/books" routerLinkActive='active-link'>Books</a>
     <a class="nav-link" routerLink="/authors" routerLinkActive='active-link'>Authors</a>
     <a class="nav-link" routerLink="/genres" routerLinkActive='active-link'>Genres</a>
+    <a class="nav-link" routerLink="/table" routerLinkActive="active-link">Table</a>
   </div>
 </div>
